--- a/styles/globals.css
+++ b/styles/globals.css
@@ -5,6 +5,9 @@ input[type='number']::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
+input[type='number'] {
+  -moz-appearance: textfield;
+}
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
